[gd_scene load_steps=2 format=3 uid="uid://bcrntcgnahwa6"]

[ext_resource type="Script" uid="uid://v0iuiaictghb" path="res://ui/dialogue/dialogue_choices.gd" id="1_hulfp"]

[node name="DialogueChoices" type="Control" node_paths=PackedStringArray("buttons")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hulfp")
buttons = [NodePath("MarginContainer/VBoxContainer/TalkBtn"), NodePath("MarginContainer/VBoxContainer/ShopBtn"), NodePath("MarginContainer/VBoxContainer/ExitBtn")]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -23.0
offset_top = -65.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TalkBtn" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
mouse_filter = 2
text = "talk"

[node name="ShopBtn" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
mouse_filter = 2
text = "shop"

[node name="ExitBtn" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
mouse_filter = 2
text = "exit"
